# tonic-pg

./: .gitignore  Cargo.toml  README.md  build.rs  user.sql
proto/: user.proto
src/: main.rs  model.rs  service.rs
